<resources>
    <string name="app_name">InstagramClone</string>
    <string name="facebook_app_id">1229761544039161</string>
    <string name="fb_login_protocol_scheme">fb1229761544039161</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Email Login</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="about_text">This app is a clone app made for learning.</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">가 당신의 포스트에 좋아요를 눌렀습니다.</string>
    <string name="alarm_comment">가 당신의 포스트에 메세지를 남겼습니다.</string>
    <string name="alarm_follow">가 팔로우를 하였습니다.</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="upload_loading">Please Wait…</string>

    <!-- Toolbar -->
    <string name="back">Back</string>
    <string name="detail_UserName">User_name</string>
    <string name="detail_LikeCount">like %s</string>
    <string name="detail_content">Explain content</string>
    <string name="btn_setting">Setting</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
